<resources>
    <string name="app_name">workordercomponent</string>
    <string name="workorder_name_title">工单</string>
    <string name="workorder_approval_title">审批申请</string>
    <string name="workorder_submit">提交</string>
    <string name="work_order_person_empty">无执行人</string>
    <string name="work_order_no_person">暂无执行人</string>
    <string name="workorder_delete">删除</string>
    <string name="workorder_tip_title">提示</string>
    <string name="workorder_tip_title_t">提示</string>
    <string name="workorder_delete_laborers">是否删除该审批人</string>
    <string name="workorder_edit_cost">修改收费项</string>
    <string name="workorder_add_cost">添加收费项</string>
    <string name="workorder_save">保存</string>
    <string name="workorder_input_name_hint">请输入名称</string>
    <string name="workorder_input_amount_hint">请输入费用</string>
    <string name="workorder_tool_fee">工具费用</string>
    <string name="workorder_charge_title">收费项</string>
    <string name="workorder_add_menu">添加</string>
    <string name="workorder_confirm">确定</string>
    <string name="workorder_delete_item">是否删除该收费项</string>
    <string name="workorder_delete_position">是否删除该空间位置</string>
    <string name="workorder_delete_tool_tip_content">是否删除该工具</string>
    <string name="workorder_create">创建工单</string>
    <string name="workorder_report_fault">报障</string>
    <string name="workorder_report_self">自检</string>
    <string name="workorder_delete_device">是否删除该设备?</string>
    <string name="workorder_report_correct">纠正性维护</string>
    <string name="workorder_stype_hint">请选择服务类型</string>
    <string name="workorder_phone_hint">请输入联系电话</string>
    <string name="workorder_department_hint">请选择部门</string>
    <string name="workorder_priority_hint">请选择优先级</string>
    <string name="workorder_position_select_hint">请先选择位置</string>
    <string name="workorder_position_select_hint_tip">请选择空间位置</string>
    <string name="workorder_type_hint">请选择工单类型</string>
    <string name="workorder_select_photo_title">选择照片</string>
    <string name="workorder_select_camera">拍照</string>
    <string name="workorder_select_photo">从相册选择</string>
    <string name="workorder_cancel">取消</string>
    <string name="workorder_delete_picture">是否确定删除该图片</string>
    <string name="workorder_select_photo_at_most">你最多可以选择%d张图片</string>
    <string name="workorder_add_again">请勿重复添加</string>
    <string name="workorder_position_add_again">该空间位置已存在</string>
    <string name="workorder_add_device">添加设备</string>
    <string name="workorder_select_device_hint">请选择设备</string>
    <string name="workorder_associated_equipment">关联设备</string>
    <string name="workorder_refresh_list_failed">刷新列表失败</string>
    <string name="workorder_arrange_order">派工</string>
    <string name="workorder_time_error">时间比对有误</string>
    <string name="workorder_delete_executor">是否删除该执行人</string>
    <string name="workorder_work_date">工作时间</string>
    <string name="workorder_illegal_time">请选择实际完成时间</string>
    <string name="workorder_history_recorder">历史记录</string>
    <string name="workorder_detail_title">工单详情</string>
    <string name="workorder_work_detail_basic_create">%1$s 创建于 %2$s</string>
    <string name="workorder_get_data_error">获取数据失败</string>
    <string name="workorder_continue_tip">请先继续工作</string>
    <string name="workorder_no_permission">暂无权限</string>
    <string name="workorder_work_content_title">填写工作内容</string>
    <string name="workorder_work_content_tip">请填写工作内容或添加照片</string>
    <string name="workorder_person_search_title">选择人员</string>
    <string name="workorder_no_select">暂未选择</string>
    <string name="workorder_undo_home_title">待处理工单</string>
    <string name="workorder_arrange_work_order_title">待派工工单</string>
    <string name="workorder_approval_work_order_title">待审批工单</string>
    <string name="workorder_archive_home_title">待存档工单</string>
    <string name="workorer_no_more_data">无更多数据</string>
    <string name="workorder_no_function">暂无功能</string>
    <string name="workorder_related_payment">关联缴费单</string>
    <string name="workorder_no_data">暂无数据</string>
    <string name="workorder_my_report_fault">我的报障</string>
    <string name="workorder_query">维护工单查询</string>
    <string name="workorder_unlimited">不限</string>
    <string name="workorder_year">年</string>
    <string name="workorder_month">月</string>
    <string name="workorder_select_time_error">时间选择有误</string>
    <string name="workorder_material">物料</string>
    <string name="workorder_book_tip">预定</string>
    <string name="workorder_edit_position_title">修改空间位置</string>
    <string name="workorder_position_add_title">添加空间位置</string>
    <string name="workorder_location">空间位置</string>
    <string name="workorder_location_tip">空间位置：</string>
    <string name="workorder_menu_step">维护步骤</string>
    <string name="workorder_steps_completed_notice_tip">已完成步骤无法再操作，谢谢</string>
    <string name="workorder_step">步骤</string>
    <string name="workorder_step_tip">步骤：</string>
    <string name="workorder_is_completed">请确认是否完成</string>
    <string name="workorder_add_tool">添加工具</string>
    <string name="workorder_modify_tool">修改工具</string>
    <string name="workorder_number_hint">请输入数量</string>
    <string name="workorder_unit_hint">请输入单位</string>
    <string name="workorder_tool">工具</string>
    <string name="workorder_work_time">工作时间：</string>
    <string name="workorder_person_on_guard">在岗</string>
    <string name="workorder_person_off_guard">离开</string>
    <string name="workorder_unfinish">未完成</string>
    <string name="workorder_finished">已完成</string>
    <string name="workorder_approval_parameter">审批说明</string>
    <string name="workorder_operate_success">操作成功</string>
    <string name="workorder_operate_fail">操作失败</string>
    <string name="workorder_device_exist">该设备已存在</string>
    <string name="workorder_submit_success">工单提交成功</string>
    <string name="workorder_submit_failed">工单提交失败</string>
    <string name="workorder_qrcode_no_match">二维码不正确，请确认</string>
    <string name="workorder_stop">终止</string>
    <string name="workorder_accept_order">接单</string>
    <string name="workorder_back_order">退单</string>
    <string name="workorder_finish">处理完成</string>
    <string name="workorder_stop_order">暂停</string>
    <string name="workorder_verify_tip">验证</string>
    <string name="workorder_archive">存档</string>
    <string name="workorder_approval_order">审批</string>
    <string name="workorder_none_any_people">物料预定单信息不完整，是否使用默认值</string>
    <string name="workorder_terminal_error">存在其他执行人尚未接单，无法终止工单</string>
    <string name="workorder_device_un_completed_tip">你还有%1$d个设备未完成维保，是否提交，请确认</string>
    <string name="workorder_finish_error">存在其他执行人尚未接单，无法完成工单</string>
    <string name="workorder_terminal">终止工单</string>
    <string name="workorder_hint_reason_stop">请输入终止原因...</string>
    <string name="workorder_approval_tip">审批工单</string>
    <string name="wrokorder_hint_reason_approval">请输入审批意见...</string>
    <string name="workorder_reject">拒绝</string>
    <string name="workorder_pass">通过</string>
    <string name="workorder_tip_verify">验证工单</string>
    <string name="workorder_desc">请输入描述...</string>
    <string name="workorder_pause_tip">暂停工单</string>
    <string name="workorder_pause_reason_hint">请输入暂停原因...</string>
    <string name="workorder_pause_tip_a">如果选择继续，那么工单会暂停，需要继续完成；如果选择不继续，那么工单需要重新派单</string>
    <string name="workorder_continue_order">继续工作</string>
    <string name="workorder_over_order">不继续工作</string>
    <string name="workorder_back_reason_hint">请输入退单原因...</string>
    <string name="workorder_press_exit_again">再按一次退出</string>
    <string name="workorder_device_code">设备编码：</string>
    <string name="workorder_device_code_title">设备编码</string>
    <string name="workorder_device_name">设备名称：</string>
    <string name="workorder_device_name_title">设备名称</string>
    <string name="workorder_device_location">设备位置：</string>
    <string name="workorder_code_device">设备编码：</string>
    <string name="workorder_device_desc">现场描述：</string>
    <string name="workorder_device_desc_title">现场描述</string>
    <string name="workorder_device_repair">处理方式：</string>
    <string name="workorder_device_repair_title">处理方式</string>
    <string name="workorder_responsible">负责人</string>
    <string name="workorder_book_order_code">预定单号：</string>
    <string name="workorder_book_person">预定人：</string>
    <string name="workorder_book_time">预定日期：</string>
    <string name="workorder_storage_name">仓库名称：</string>
    <string name="workorder_relate_order">关联工单：</string>
    <string name="workorder_reason">理由：</string>
    <string name="workorder_model">型号：</string>
    <string name="workorder_model_title">型号</string>
    <string name="workorder_apply_reason">申请事由</string>
    <string name="workorder_hint_reason_apply_approval">请输入申请事由...</string>
    <string name="workorder_approval_person">审批人</string>
    <string name="workorder_charge">收费项</string>
    <string name="workorder_charge_name_hint">请输入名称</string>
    <string name="workorder_charge_amount">费用</string>
    <string name="workorder_total_cost">总计：</string>
    <string name="workorder_basic_info">基本信息</string>
    <string name="workorder_applicant">申请人</string>
    <string name="workorder_phone">联系电话</string>
    <string name="workorder_org">部门</string>
    <string name="workorder_org_tip">部门：</string>
    <string name="workorder_position">位置</string>
    <string name="workorder_position_tip">位置：</string>
    <string name="workorder_type">工单类型</string>
    <string name="workorder_stype">服务类型</string>
    <string name="workorder_stype_tip">服务类型：</string>
    <string name="workorder_priority">优先级</string>
    <string name="workorder_priority_tip">优先级：</string>
    <string name="workorder_fault_device">故障设备</string>
    <string name="workorder_describe_tip">问题描述</string>
    <string name="workorder_describle_hint">请输入现场描述...</string>
    <string name="workorder_repair_type_hint">请输入处理方式...</string>
    <string name="workorder_time">预计工作时间</string>
    <string name="workorder_arrive_time">预计开始时间</string>
    <string name="workorder_end_time">预计结束时间</string>
    <string name="workorder_use_time">耗时(小时)</string>
    <string name="workorder_person_tip">执行人(选中的是负责人)</string>
    <string name="workorder_approval_send_wo_content">派发工作内容</string>
    <string name="workorder_approval_send_wo_content_tip">派发工作内容：</string>
    <string name="workorder_send_work_content_hint">请输入工作内容...</string>
    <string name="workorder_send_work_content_hint_t">请输入工作内容...</string>
    <string name="workorder_send_wrongreason_content_hint_t">请输入故障原因...</string>
    <string name="workorder_person_arrive_time">实际到场时间</string>
    <string name="workorder_person_date_select">日期选择</string>
    <string name="workorder_person_finish_time">实际完成时间</string>
    <string name="workorder_look_all">查看全部</string>
    <string name="workorder_estimate_time">预估时间：</string>
    <string name="workorder_describe_tip_x">问题描述：</string>
    <string name="workorder_approval_content">审批内容</string>
    <string name="workorder_person">执行人</string>
    <string name="workorder_payments">缴费单列表</string>
    <string name="workorder_hand_write_tip">客户签字</string>
    <string name="workorder_hand_ok_tip">已签</string>
    <string name="workorder_hand_no_sign_tip">未签</string>
    <string name="workorder_hand_manager_tip">主管签字</string>
    <string name="workorder_attachment">附件</string>
    <string name="workorder_processing_content">填写处理内容</string>
    <string name="workorder_filter_conditions_hint">请输入过滤条件</string>
    <string name="workorder_select_orders_tip">处理中工单数</string>
    <string name="workorder_select_tip">选择</string>
    <string name="workorder_laborer_attendance_time_placeholder">请选择到场时间</string>
    <string name="workorder_laborer_complete_time_placeholder">请选择完成时间</string>
    <string name="workorder_select_start_date_hint">请选择开始时间</string>
    <string name="workorder_select_end_date_hint">请选择结束时间</string>
    <string name="workorder_placeholder_time">请输入耗时时间</string>
</resources>