<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.qmuiteam.qmui.widget.QMUITopBarLayout
            android:id="@+id/ui_topbar"
            style="@style/commonTopbarStyle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.scwang.smartrefresh.layout.SmartRefreshLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srlEnablePreviewInEditMode="true"
                app:srlEnableNestedScrolling="true"
                app:srlEnablePureScrollMode="true">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    android:overScrollMode="never">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/content_title_style1"
                            android:text="@string/workorder_basic_info" />

                        <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                            android:id="@+id/civ_contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            app:fm_content_item_show_line="false"
                            app:fm_content_item_show_red="true"
                            app:fm_content_item_show_tip="false"
                            app:fm_content_item_show_tip_icon="false"
                            app:fm_content_item_title="@string/workorder_applicant" />

                        <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                            android:id="@+id/civ_tel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            app:fm_content_item_et_hint="@string/workorder_phone_hint"
                            app:fm_content_item_show_line="false"
                            app:fm_content_item_show_red="true"
                            app:fm_content_item_show_tip="false"
                            app:fm_content_item_show_tip_icon="false"
                            app:fm_content_item_title="@string/workorder_phone" />

                        <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                            android:id="@+id/civ_dep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/list_item_bg"
                            app:fm_content_item_show_line="false"
                            app:fm_content_item_show_red="false"
                            app:fm_content_item_show_tip="true"
                            app:fm_content_item_show_tip_icon="true"
                            app:fm_content_item_title="@string/workorder_org"
                            app:fm_content_item_et_hint="@string/workorder_department_hint" />

                        <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                            android:id="@+id/civ_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/list_item_bg"
                            app:fm_content_item_show_line="false"
                            app:fm_content_item_show_red="true"
                            app:fm_content_item_show_tip="true"
                            app:fm_content_item_show_tip_icon="true"
                            app:fm_content_item_title="@string/workorder_position"
                            app:fm_content_item_et_hint="@string/workorder_position_select_hint" />

                        <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                            android:id="@+id/civ_workorder_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/list_item_bg"
                            app:fm_content_item_show_line="false"
                            app:fm_content_item_show_red="true"
                            app:fm_content_item_show_tip="true"
                            app:fm_content_item_show_tip_icon="true"
                            app:fm_content_item_title="@string/workorder_type"
                            app:fm_content_item_et_hint="@string/workorder_type_hint" />

                        <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                            android:id="@+id/civ_service_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/list_item_bg"
                            app:fm_content_item_show_line="false"
                            app:fm_content_item_show_red="true"
                            app:fm_content_item_show_tip="true"
                            app:fm_content_item_show_tip_icon="true"
                            app:fm_content_item_title="@string/workorder_stype"
                            app:fm_content_item_et_hint="@string/workorder_stype_hint" />

                        <com.facilityone.wireless.a.arch.widget.CustomContentItemView
                            android:id="@+id/civ_priority"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/list_item_bg"
                            app:fm_content_item_show_line="true"
                            app:fm_content_item_show_red="true"
                            app:fm_content_item_show_tip="true"
                            app:fm_content_item_show_tip_icon="true"
                            app:fm_content_item_title="@string/workorder_priority"
                            app:fm_content_item_et_hint="@string/workorder_priority_hint" />

                        <!--故障设备-->
                        <TextView
                            android:id="@+id/device_tv"
                            style="@style/content_title_style1"
                            android:text="@string/workorder_fault_device"
                            android:visibility="gone" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/device_recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:overScrollMode="never"
                            android:visibility="gone" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/content_title_style1"
                                android:paddingRight="@dimen/dp_0"
                                android:text="@string/workorder_describe_tip" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/dp_6"
                                android:text="*"
                                android:textColor="@color/red"
                                android:visibility="gone" />

                        </LinearLayout>

                        <com.facilityone.wireless.a.arch.widget.EditNumberView
                            android:id="@+id/env_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:fm_edit_number_desc="@string/workorder_desc" />

                        <View style="@style/secant_line_style" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_photo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:overScrollMode="never"
                            android:paddingBottom="@dimen/dp_13"
                            android:paddingLeft="@dimen/dp_15"
                            android:paddingRight="@dimen/dp_4" />

                        <View style="@style/secant_line_style" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_100" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>
            </com.scwang.smartrefresh.layout.SmartRefreshLayout>

            <ImageView
                android:id="@+id/iv_add_menu"
                android:layout_width="@dimen/dp_55"
                android:layout_height="@dimen/dp_55"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@drawable/add_menu_selector" />

        </RelativeLayout>


    </LinearLayout>
</layout>